# ronny-ascencio-portfolio

./: .gitignore  404.html  README.md  angular.json  hugo.toml  index.html  index.txt  next.config.mjs  package-lock.json  package.json  pyproject.toml  rxconfig.py
.github/workflows/: hugo.yaml
_next/static/chunks/: 255-37c4b54109306229.js  517-43776f58d474778e.js  main-0117fc32e5d90cc7.js  main-app-0fcea724647abf78.js  webpack-7868cc2d9b34d072.js
_next/static/chunks/app/: layout-4777df22162caed4.js  (+1 more)
_next/static/css/: 38070bf8450ed907.css
_next/static/pjUbN6aUrMp2hshGKQMWU/: _buildManifest.js
assets/: assets.js  assets.jsx
backend/: main.py  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: main.py
backend/app/api/routers/: login.py  projects.py  users.py  utils.py
backend/app/core/: config.py
content/projects/: ateru.md  cinematography.md
frontend/: package.json
frontend/.astro/: content.d.ts  data-store.json  settings.json
frontend/src/components/: Hero.astro  History.astro  LogIn.astro  MainFooter.astro  Projects.astro  TestMe.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro  login.astro
frontend/src/styles/: global.css
public/: 404.html  index.html  index.xml  main.css.map  sitemap.xml
public/categories/: index.html  index.xml
public/projects/: index.html  index.xml
public/projects/ateru/: index.html
public/projects/cinematography/: index.html
public/tags/: index.html  index.xml
public/tags/pipeline/: index.html  index.xml
public/tags/python/: index.html  index.xml
public/tags/vfx/: index.html  index.xml
ronny_ascencio_portfolio/pages/: hero.py
src/: index.html
src/app/: app.component.html  app.component.spec.ts  app.component.ts  layout.js  layout.jsx  page.jsx
src/app/assets/: assets.jsx
(+5 files in other folders)
